Fix module-info VSCode errors